Modified apache templates.

--- a/templates/project-apache.conf
+++ b/templates/project-apache.conf
@@ -2,12 +2,13 @@
     ServerName {{domain}}
 
     DocumentRoot /opt/webapps/{{domain}}/env/{{project}}
-    <Directory /opt/webapps/{{domain}}/env/{{project}}
+    <Directory /opt/webapps/{{domain}}/env/{{project}>}
          AllowOverride All
     </Directory>
     Alias /static/ /opt/webapps/{{domain}}/static/
-    ErrorLog /var/log/apache/{{domain}}.error_log
-    AccessLog /var/log/apache/{{domain}}.access_log
+    ErrorLog /var/log/apache2/{{domain}}.error_log
+    LogFormat "%h %l %u %t \"%r\" %>s %b" access
+    CustomLog /var/log/apache2/{{domain}}.access_log access
 
     <IfModule mod_wsgi.c>
         WSGIScriptAlias / /opt/webapps/{{domain}}/env/myvirtualdjango.py
