--- a/templates/project-nginx.conf
+++ b/templates/project-nginx.conf
@@ -33,6 +33,11 @@ server {
     uwsgi_pass {{uwsgi_version}};
   }
 
+  # Point to a global robots.txt file. 
+  location /robots.txt {
+    alias /etc/nginx/robots.txt;
+  }
+
   # This handy directive allows us to get status updates from nginx. Useful for monitoring services.
   location /nginx_status {
     stub_status   on;
