Fixes for nginx and apache templates

--- a/templates/project-apache.conf
+++ b/templates/project-apache.conf
@@ -2,7 +2,7 @@
     ServerName {{domain}}
 
     DocumentRoot /opt/webapps/{{domain}}/env/{{project}}
-    <Directory /opt/webapps/{{domain}}/env/{{project}>}
+    <Directory /opt/webapps/{{domain}}/env/{{project}}>
          AllowOverride All
     </Directory>
     Alias /static/ /opt/webapps/{{domain}}/static/
