Updating templates to fix permissions, remove outer static dir and further automate setup.

--- a/templates/project-nginx.conf
+++ b/templates/project-nginx.conf
@@ -4,7 +4,7 @@ server {
   listen    443 ssl;
   server_name {{domain}};
   charset   utf-8;
-  root    /opt/webapps/{{domain}}/static;
+  root    /opt/webapps/{{domain}}/env/{{project}};
 
   access_log  /var/log/nginx/{{domain}}.access.log;
   error_log /var/log/nginx/{{domain}}.error.log;
