Updated ssl settings.

--- a/templates/project-nginx.conf
+++ b/templates/project-nginx.conf
@@ -1,13 +1,13 @@
 # Here's the configuration for the front-end http server
 server {
   listen    80;
-  listen    443 ssl;
+  listen    443 default ssl;
   server_name {{domain}};
   charset   utf-8;
   root    /opt/webapps/{{domain}}/env/{{project}};
 
-  access_log  /var/log/nginx/{{domain}}.access.log;
-  error_log /var/log/nginx/{{domain}}.error.log;
+  access_log  /var/log/nginx/{{project}}.access.log;
+  error_log /var/log/nginx/{{project}}.error.log;
 
   # Include generic uwsgi parameters and set the parameters specific to this project so that
   # uwsgi knows which virtual host to transfer this request to
