--- a/templates/project-nginx.conf
+++ b/templates/project-nginx.conf
@@ -1,7 +1,7 @@
 # Here's the configuration for the front-end http server
 server {
-  listen    80;
-  listen    443 default ssl;
+  listen    80 default;
+  listen    443 ssl;
   server_name {{domain}};
   charset   utf-8;
   root    /opt/webapps/{{domain}}/env/{{project}};
